--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.17.0",
     "material-ui-banner": "^1.4.3",
     "react": "^17.0.1",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
