--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "date-fns": "^2.17.0",
+    "filefy": "^0.1.10",
     "material-ui-banner": "^1.4.3",
     "react": "^17.0.1",
-    "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
