--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^1.0.7",
     "@date-io/date-fns": "^2.10.8",
     "@material-ui/core": "^4.11.3",
     "@material-ui/data-grid": "^4.0.0-alpha.20",
@@ -13,14 +14,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "aws-amplify": "^3.3.27",
+    "aws-sdk": "^2.890.0",
     "date-fns": "^2.17.0",
     "filefy": "^0.1.10",
+    "js-yaml": "^3.13.1",
     "material-ui-banner": "^1.4.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "storybook": "^6.1.21",
+    "swagger-ui-express": "^4.1.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
