--- a/package.json
+++ b/package.json
@@ -3,30 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/ui-react": "^1.0.7",
-    "@date-io/date-fns": "^2.10.8",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/data-grid": "^4.0.0-alpha.20",
+    "@date-io/date-fns": "^2.11.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.35",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/pickers": "^3.2.10",
-    "@material-ui/styles": "^4.11.3",
-    "@react-pdf/renderer": "^1.6.13",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "aws-amplify": "^3.3.27",
-    "aws-sdk": "^2.890.0",
-    "date-fns": "^2.17.0",
-    "filefy": "^0.1.10",
-    "js-yaml": "^3.13.1",
+    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/styles": "^4.11.4",
+    "@react-pdf/renderer": "^2.0.18",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
+    "filefy": "^0.1.11",
+    "js-yaml": "^4.1.0",
     "material-ui-banner": "^1.4.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "storybook": "^6.1.21",
+    "react-scripts": "^4.0.3",
+    "storybook": "^5.1.11",
     "swagger-ui-express": "^4.1.6",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,12 +53,12 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-actions": "^6.3.6",
     "@storybook/addon-essentials": "^6.1.21",
-    "@storybook/addon-links": "^6.1.21",
-    "@storybook/addon-viewport": "^6.1.20",
-    "@storybook/node-logger": "^6.1.21",
-    "@storybook/preset-create-react-app": "^3.1.6",
-    "@storybook/react": "^6.1.21"
+    "@storybook/addon-links": "^6.3.6",
+    "@storybook/addon-viewport": "^6.3.6",
+    "@storybook/node-logger": "^6.3.6",
+    "@storybook/preset-create-react-app": "^1.2.0",
+    "@storybook/react": "^6.3.6"
   }
 }
