--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "telephant-spa",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://localhost:3443",
   "dependencies": {
     "@date-io/date-fns": "^2.11.0",
     "@material-ui/core": "^4.12.3",
@@ -20,6 +21,8 @@
     "material-ui-banner": "^1.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
+    "react-hook-form": "^7.12.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "storybook": "^5.1.11",
