--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-yaml": "^4.1.0",
     "material-ui-banner": "^1.4.3",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
     "react-hook-form": "^7.12.2",
