--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "filefy": "^0.1.11",
     "js-yaml": "^4.1.0",
     "material-ui-banner": "^1.4.3",
+    "query-string": "^4.3.4",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
