--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@storybook/addon-viewport": "^6.3.6",
     "@storybook/node-logger": "^6.3.6",
     "@storybook/preset-create-react-app": "^1.2.0",
-    "@storybook/react": "^6.3.6"
+    "@storybook/react": "^6.3.6",
+    "prettier": "2.2.1"
   }
 }
