--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.21.1",
+    "chart.js": "^3.5.0",
     "date-fns": "^2.23.0",
     "filefy": "^0.1.11",
+    "i": "^0.3.6",
     "js-yaml": "^4.1.0",
     "material-ui-banner": "^1.4.3",
+    "npm": "^7.20.6",
     "query-string": "^4.3.4",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
@@ -27,7 +30,7 @@
     "react-hook-form": "^7.12.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "storybook": "^5.1.11",
+    "storybook": "^6.3.7",
     "swagger-ui-express": "^4.1.6",
     "web-vitals": "^2.1.0"
   },
@@ -43,6 +46,16 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -58,13 +71,14 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.3.6",
-    "@storybook/addon-essentials": "^6.1.21",
-    "@storybook/addon-links": "^6.3.6",
-    "@storybook/addon-viewport": "^6.3.6",
-    "@storybook/node-logger": "^6.3.6",
-    "@storybook/preset-create-react-app": "^1.2.0",
-    "@storybook/react": "^6.3.6",
+    "@babel/core": "^7.15.0",
+    "@storybook/addon-actions": "^6.3.7",
+    "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-links": "^6.3.7",
+    "@storybook/node-logger": "^6.3.7",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.3.7",
+    "babel-loader": "^8.2.2",
     "prettier": "2.2.1"
   }
 }
