--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-scripts": "^4.0.3",
     "storybook": "^6.3.7",
     "swagger-ui-express": "^4.1.6",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
