--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "proxy": "https://localhost:3443",
   "dependencies": {
     "@date-io/date-fns": "^2.11.0",
+    "@hookform/error-message": "^2.0.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.35",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "*",
     "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.4",
     "@react-pdf/renderer": "^2.0.18",
@@ -28,8 +30,10 @@
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
     "react-hook-form": "^7.12.2",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^4.3.1",
     "storybook": "^6.3.7",
     "swagger-ui-express": "^4.1.6",
     "web-vitals": "^2.1.0",
